Feature: Added sass development environment to views.

--- a/resources/sass/_app.sass
+++ b/resources/sass/_app.sass
@@ -4,4 +4,7 @@
 
 // Configuración global del font-size
 html
-  font-size: 62.5%
+    font-size: 62.5%
+    box-sizing: border-box
+    padding: 0
+    margin: 0
