--- a/resources/sass/_register.sass
+++ b/resources/sass/_register.sass
@@ -1,5 +1,194 @@
-
-// Luego puedes usar la fuente en tus estilos:
 body, input, button
-  font-family: 'Poppins', sans-serif
+    font-family: 'Poppins', sans-serif
+
+
+
+.form-register
+    .title-register
+        font-size: $title-card
+
+    background: $cards
+    width: 130rem
+    height: 90rem
+    border-radius: 1.6rem
+    display: flex
+    align-items: center
+    justify-content: space-between
+    flex-wrap: wrap
+    flex-direction: column
+    box-shadow: $shadow
+
+    & .elements-container
+        width: 100%
+        display: flex
+        flex-direction: row
+        margin: -3rem 1rem 0 0
+        height: fit-content
+        justify-content: space-around
+
+        & .text-labels
+            font-size: $subtitle
+            font-weight: 500
+            margin-top: 1rem
+
+        & .input-icon-container
+            position: relative
+            display: flex
+            background: $background
+            justify-content: space-evenly
+            align-items: center
+            width: 59rem
+            height: 5.5rem
+            margin-top: 1rem
+            border-radius: $br-rad
+            border: 2px solid transparent
+            box-shadow: $shadow
+
+            &:focus-within
+                transition: all .4s ease-in-out
+                outline: none
+                border: 2px solid $active
+
+            &.input-icon-container input[type="date"]::-webkit-calendar-picker-indicator
+                display: none
+                opacity: 0
+
+            &.input-icon-container input[type="date"]
+                position: relative
+                z-index: 2
+                transition: $standar
+
+            .inputs
+                width: 53rem
+                outline: none
+                height: 4rem
+                font-size: $subtitle-card
+                border: 2px solid transparent
+                border-radius: .8rem
+                transition: $standar
+
+                &.inputs:-webkit-autofill, .inputs:-webkit-autofill:focus
+                    background: $background
+                    box-shadow: 0 0 0 1000px $background inset;
+                    -webkit-box-shadow: 0 0 0 1000px $background inset;
+                    transition: background 5000s ease-in-out 0s;
+
+
+            .gif-icons
+                width: 5rem
+                height: 5rem
+                z-index: 20
+                cursor: pointer
+                transition: $standar
+
+
+            &:focus
+                transition: $standar
+                outline: none
+                border: 2px solid $active
+
+    .gender-containerIf
+        width: 57rem
+        display: flex
+        align-items: center
+        justify-content: center
+        background: $background
+        border-radius: $br-rad
+        cursor: pointer
+        font-size: $subtitle-card
+        // transition: $standar
+
+    .select
+        width: 57rem
+        cursor: pointer
+        transition: $standar
+        display: flex
+        justify-content: space-between
+        // margin-right: 25rem
+
+
+
+
+
+
+    .dropdown
+        background: $background
+        box-shadow: $shadow
+        list-style: none
+        border-radius: $br-rad
+        padding: 0 1rem
+
+        .gender-container
+            width: 50rem
+            display: flex
+            align-items: center
+            justify-content: center
+            font-size: $subtitle-card
+            cursor: pointer
+
+            .gif-icons
+                width: 4rem
+                height: 4rem
+
+
+
+
+.container-main
+    width: 100%
+    height: auto
+    margin: 0
+    padding: 0
+    display: flex
+    margin-top: 2rem
+    flex-direction: column
+    justify-content: center
+    align-items: center
+
+.end-card
+    width: 100%
+    height: fit-content
+    display: flex
+    margin-top: -1rem
+    align-items: center
+    flex-direction: column
+
+    .btn-ok
+        width: 24rem
+        height: 5rem
+        font-size: $subtitle
+        border-radius: $br-rad
+        border: none
+        outline: none
+        background: $buttons
+        color: $background
+        cursor: pointer
+        border: 1px solid transparent
+        transition: $standar
+
+        &:hover
+                color: $buttons
+                background: $background
+                border: 1px solid $buttons
+                transition: $standar
+
+        &:active
+            transform: scale(.9)
+            transition: $standar
+
+    .question
+        margin: 3rem 0 3rem 0
+        text-align: center
+        color: #000000fd
+        font-size: $title-card
+        transition: $standar
+
+        .link:hover
+            color: $buttons
+            transition: $standar
+
+
+
+.img-logo
+    width: 18rem
+
 
