--- a/resources/sass/_variables.sass
+++ b/resources/sass/_variables.sass
@@ -1,12 +1,22 @@
 // Colors
-$background_principal: #FFFFFF;
+$background: #FFFFFF;
 $cards: #BEC7F5;
 $buttons: #2583AC;
+$active: #5971E6;
 
 //Font-Size
-$title: 4rem;
-$subtitle: 3.6rem;
-$title-card: 3.2rem;
-$subtitle-card: 2.4rem;
-$description-card: 2rem;
+$title: 3.6rem;
+$subtitle: 3.2rem;
+$title-card: 2.4rem;
+$subtitle-card: 2rem;
+$description-card: 1.5rem;
+
+//Transitions
+$standar: all 400ms ease-in-out;
+
+// Border Radius
+$br-rad: .8rem;
+
+// Box Shadow
+$shadow: .1rem .2rem 1rem #000000be;
 
