--- a/resources/sass/_app.sass
+++ b/resources/sass/_app.sass
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap')
 @import '_variables';
-@import '_register'
+@import '_register';
+@import 'responsive/_registerTablet'
 
 // Configuración global del font-size
 html
