Feat: Added transition

--- a/resources/sass/responsive/_registerTablet.sass
+++ b/resources/sass/responsive/_registerTablet.sass
@@ -4,6 +4,7 @@
         max-width: 75rem
         width: 100%
         height: 150rem
+        transition: $standar
 
         & .elements-container ~ div
             width: 80%
