Fix: Correction of error in the background color

--- a/resources/sass/_app.sass
+++ b/resources/sass/_app.sass
@@ -2,6 +2,7 @@
 @import '_variables';
 @import '_register';
 @import 'responsive/_registerTablet'
+@import 'responsive/_registerMobile'
 
 // Configuración global del font-size
 html
