Feat: Added the login view with yours styles and function for look the password

--- a/resources/sass/_app.sass
+++ b/resources/sass/_app.sass
@@ -3,6 +3,7 @@
 @import '_register';
 @import 'responsive/_registerTablet'
 @import 'responsive/_registerMobile'
+@import '_login'
 
 // Configuración global del font-size
 html
