--- a/resources/sass/_register.sass
+++ b/resources/sass/_register.sass
@@ -162,7 +162,7 @@ body, input, button
     flex-direction: column
 
     .btn-ok
-        width: 24rem
+        width: fit-content
         height: 5rem
         font-size: $subtitle
         border-radius: $br-rad
