--- a/resources/sass/_login.sass
+++ b/resources/sass/_login.sass
@@ -68,3 +68,9 @@
             width: 5rem
             height: 5rem
             margin-right: 1rem
+
+    // Tablet
+@media screen and (max-width: 1211px) and (min-width: 600px)
+    .form-login
+        max-width: 75rem
+        width: 100%
