Feat: Added the responsive for pcs of 14 inch

--- a/resources/sass/_login.sass
+++ b/resources/sass/_login.sass
@@ -32,6 +32,7 @@
         height: 30rem
         justify-content: start
 
+
     .items-login
         height: 12rem
 
@@ -69,8 +70,53 @@
             height: 5rem
             margin-right: 1rem
 
+
+// PCs 14inch
+@media screen and (max-width: 1299px) and (min-width: 1212px)
+    .img-logo
+        width: 15rem
+        height: 15rem
+
+    .form-login
+        height: 55rem
+        width: 55rem
+
+        .text-login
+            font-size: $description-card
+
+        .element-login-container
+            height: 35rem
+            width: 15rem
+
+            .items-login
+                height: 9rem
+                width: 50rem
+
+                label
+                    font-size: $description-card
+
+                input
+                    width: 15rem
+
+        .input-icon-container-login
+            width: 50rem
+
+    #btn-login
+        margin-top: 1rem
+        font-size: $subtitle-card
+
+    #question-login
+        margin-top: 1rem
+        font-size: $subtitle-card
+
+        .link
+            font-size: $subtitle-card
+
+
+
     // Tablet
 @media screen and (max-width: 1211px) and (min-width: 600px)
     .form-login
         max-width: 75rem
         width: 100%
+
