Feat: Added the style for the message of erros

--- a/resources/sass/_app.sass
+++ b/resources/sass/_app.sass
@@ -4,6 +4,7 @@
 @import 'responsive/_registerTablet'
 @import 'responsive/_registerMobile'
 @import '_login'
+@import 'responsive/_loginMobile'
 
 // Configuración global del font-size
 html
