--- a/resources/sass/_login.sass
+++ b/resources/sass/_login.sass
@@ -70,6 +70,12 @@
             height: 5rem
             margin-right: 1rem
 
+    .error-container
+        margin-top: -1.5rem
+        .error
+            font-size: $description-card
+            color: $errors
+
 
 // PCs 14inch
 @media screen and (max-width: 1299px) and (min-width: 1212px)
@@ -120,46 +126,3 @@
         max-width: 75rem
         width: 100%
 
-@media screen and ( max-width: 599px ) and (min-width: 360px)
-    .img-logo
-        width: 15rem
-        height: 15rem
-
-    .form-login
-        max-width: 35rem
-        height: 62rem
-        width: 100%
-
-        .text-login
-            font-size: $subtitle-card
-
-        .element-login-container
-            width: 33rem
-            height: 20rem
-
-            .items-login
-                width: 33rem
-                height: 10rem
-
-                label
-                    font-size: $subtitle-card
-
-                input
-                    width: 20rem
-                    font-size: $description-card
-
-            .input-icon-container-login
-                width: 32rem
-
-                .gif-icons
-                    width: 3.5rem
-                    height: 3.5rem
-    #btn-login
-        margin-top: 2rem
-        font-size: $subtitle-card
-
-    #question-login
-        font-size: $subtitle-card
-
-        .link
-            font-size: $subtitle-card
