--- a/resources/sass/_app.sass
+++ b/resources/sass/_app.sass
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap')
-@import '_variables';
-@import '_register';
+@import '_variables'
+@import '_register'
 @import 'responsive/_registerTablet'
 @import 'responsive/_registerMobile'
 @import '_login'
 @import 'responsive/_loginMobile'
+@import '_sidebar'
 
 // Configuración global del font-size
 html
