Feat: Add the responsive for mobiles devices

--- a/resources/sass/_app.sass
+++ b/resources/sass/_app.sass
@@ -6,6 +6,7 @@
 @import '_login'
 @import 'responsive/_loginMobile'
 @import '_sidebar'
+@import 'responsive/_sidebarMobile'
 
 // Configuración global del font-size
 html
