--- a/resources/sass/_sidebar.sass
+++ b/resources/sass/_sidebar.sass
@@ -167,7 +167,7 @@
                         font-size: $title-card
                         background: transparent
                         transition-delay: calc( .1s * var(--i))
-            main
+        main
                 transition: $standar
 
 
@@ -255,6 +255,12 @@
                             translate: -4rem
                             visibility: hidden
                             pointer-events: none
+
+        .container-menu-mobile
+            display: none
+            cursor: default
+            pointer-events: none
+            
         main
             grid-area: main
             margin-left: 6rem
