feat(index): implement new design for admin index view

--- a/resources/sass/_app.sass
+++ b/resources/sass/_app.sass
@@ -1,12 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap')
 @import '_variables'
+
+// Registro y sesión
 @import '_register'
 @import 'responsive/_registerTablet'
 @import 'responsive/_registerMobile'
 @import '_login'
 @import 'responsive/_loginMobile'
+
+// Sidebar
 @import '_sidebar'
 @import 'responsive/_sidebarMobile'
+
+// Index
+@import '_index'
 
 // Configuración global del font-size
 html
