feat(index): Implement a new layout for the admin lessons module

--- a/resources/sass/_index.sass
+++ b/resources/sass/_index.sass
@@ -63,7 +63,7 @@
                         &:nth-child(4)
                             width: fit-content
 
-                        &:nth-child(6)
+                        &.actions
                             width: 17rem
 
                             section
@@ -87,6 +87,7 @@
                                 transition: $standar
 
                         button
-                            background: transparent
                             border: none
+                            cursor: pointer
+                            background: transparent
 
