feat(index): implement new layout for admin resource module

--- a/resources/sass/_index.sass
+++ b/resources/sass/_index.sass
@@ -54,14 +54,45 @@
                     tr td
                         border: .19rem solid $cards
 
+                        &.id
+                            width: 3rem
+
                         &:nth-child(2)
                             width: 35rem
+
+                        &.name
+                            width: 20rem
+
+                        &.prompt
+                            width: 50rem
+
+                        &.description
+                            width: 25rem
+
 
                         &:nth-child(3)
                             width: 80rem
 
+                        &.type
+                            width: 20rem
+
+
                         &:nth-child(4)
                             width: fit-content
+
+                        &.file
+                            width: 17rem
+
+                            .file-actions
+                                display: flex
+                                justify-content: space-evenly
+                                align-items: center
+
+                        &.lession
+                            width: 20rem
+
+                        &.unit
+                            width: 30rem
 
                         &.actions
                             width: 17rem
