feat(index): add support for scrollbar in the tables

--- a/resources/sass/_sidebar.sass
+++ b/resources/sass/_sidebar.sass
@@ -172,8 +172,10 @@
                 display: none
                 cursor: default
                 pointer-events: none
-                
+
         main
+            display: flex
+            min-width: 0
             grid-area: main
             margin-left: 2rem
             transition: $standar
@@ -386,4 +388,6 @@
 
             .main
                 left: 5rem
+                display: flex
+                min-width: 0
                 transition: $standar
