--- a/resources/sass/_index.sass
+++ b/resources/sass/_index.sass
@@ -1,9 +1,11 @@
 .container-table
-    width: 99.5%
-    margin-right: 2rem
-    height: fit-content
+    width: 100%
+    height: 60dvh
+    border-radius: 0 0 20px 20px
+
 
     .table-responsive
+        min-width: 0
 
         .header
             h1
@@ -34,15 +36,33 @@
         .table-container
             width: 100%
             height: fit-content
+            min-width: 0
+            overflow-x: auto
+            overflow-y: auto
+            scrollbar-width: thin
+            scrollbar-color: $cards #fff
+            -webkit-overflow-scrolling: touch
+            scroll-behavior: smooth
+            touch-action: pan-x
+
+            &::-webkit-scrollbar
+                height: 1rem
+                border-radius: 1rem
+
+            &::-webkit-scrollbar-thumb
+                border-radius: 0.5rem
+                    scrollbar-color: $cards #fff
 
             .table
-                width: inherit
+                width: max-content
+                min-width: max-content
                 border-spacing: 0
                 box-shadow: .1rem .2rem 1rem #ffffff
                 border: .19rem solid $cards
 
                 thead
                     font-size: $title-card - .3rem
+                    white-space: nowrap
 
                     tr th
                         border: .19rem solid $cards
@@ -52,6 +72,7 @@
                     font-size: $subtitle-card - .2rem
 
                     tr td
+                        white-space: nowrap
                         border: .19rem solid $cards
 
                         &.id
@@ -121,4 +142,13 @@
                             border: none
                             cursor: pointer
                             background: transparent
+
+
+@media screen and (max-width: 599px) and (min-width: 320px)
+    .container-table    
+        height: fit-content
+        width: max-content
+        min-width: max-content
+
+
 
