feat(show):add new styles to view show in the component excercise

--- a/resources/sass/_app.sass
+++ b/resources/sass/_app.sass
@@ -14,6 +14,13 @@
 
 // Index
 @import '_index'
+@import 'responsive/_indexMobile'
+
+// Show
+@import '_show'
+
+// Mixins
+@import '_mixins'
 
 // Configuración global del font-size
 html
