--- a/resources/sass/_index.sass
+++ b/resources/sass/_index.sass
@@ -1,7 +1,83 @@
+@import '_mixins'
+
 .container-table
     width: 100%
     height: 60dvh
     border-radius: 0 0 20px 20px
+
+    section
+        display: flex
+        width: 100%
+
+    @include btn-return($left: 0, $position: relative, $width: 8rem, $height: 8rem)
+
+    .unit-details
+        width: 78%
+        padding: 2.1rem
+        display: flex
+        flex-wrap: wrap
+        margin-top: 3rem
+        translate: 10rem 0
+        box-shadow: $shadow
+        border-radius: $br-rad
+
+        .user-info
+
+            h3
+                font-size: $subtitle-card
+
+            p
+                font-size: $description-card
+
+        .progress-summary
+            width: 75rem
+            display: flex
+            translate: 7rem 0
+            justify-content: space-between
+
+            .progress-item
+                width: 17rem
+                height: 17rem
+                border-radius: $br-rad
+
+                &.one
+                    background: $cards
+
+                &.two
+                    background: $buttons
+
+                &.three
+                    background: $errors
+
+                .title-progress
+                    font-weight: 600
+                    text-align: center
+                    font-size: $description-card
+
+                .text-progress
+                    position: absolute
+                    translate: 8rem
+                    font-size: $description-card + .4rem
+
+        .filter-options
+            width: 40rem
+            height: 8rem
+            display: flex
+            flex-direction: column
+
+            label
+                font-size: $subtitle-card
+
+            select
+                outline: none
+                width: 18rem
+                height: 3.5rem
+                font-family: 'Poppins', sans-serif
+                border-radius: $br-rad
+                font-size: $subtitle-card
+                border: .2rem solid $cards
+
+
 
 
     .table-responsive
@@ -82,6 +158,9 @@
                 border-radius: 0.5rem
                     scrollbar-color: $cards #fff
 
+            h4
+                font-size: $subtitle-card
+
             .table
                 width: max-content
                 min-width: max-content
@@ -123,6 +202,7 @@
                         &:nth-child(3)
                             width: 80rem
 
+
                         &.type
                             width: 20rem
 
@@ -153,6 +233,12 @@
                                 align-items: center
                                 justify-content: space-around
 
+                        & .text-green
+                            color: green
+
+                        & .text-red
+                            color: red
+
 
                         .btn-action
                             width: 3.8rem
@@ -173,11 +259,25 @@
                             background: transparent
 
 
-@media screen and (max-width: 599px) and (min-width: 320px)
+@media screen and (max-width: 1211px) and (min-width: 600px)
     .container-table
-        height: fit-content
-        width: max-content
-        min-width: max-content
+        .section
+            width: 100%
+            background: red
 
+        @include btn-return($left: -2rem, $position: relative, $height: 1rem, $width: 1rem )
+
+        .unit-details
+            width: 60rem
+            z-index: -100
+            flex-wrap: wrap
+            margin-top: 10rem
+            translate: -2rem 0
+            height: fit-content
+
+            .progress-summary
+                gap: 2rem
+                width: 40rem
+                margin-right: 10rem
 
 
