--- a/resources/sass/_sidebar.sass
+++ b/resources/sass/_sidebar.sass
@@ -8,7 +8,7 @@
         grid-template-areas: "sidebar main"
 
         .sidebar
-            width: 40rem
+            width: 35rem
             display: flex
             height: 100dvh
             position: fixed
@@ -37,8 +37,8 @@
                         transform: translateX(9%)
 
                         img
-                            width: 27rem
-                            height: 27rem
+                            width: 16rem
+                            height: 16rem
                             position: relative
                             margin-right: 5rem
 
@@ -57,9 +57,10 @@
                         transition: $standar
 
                 .nav-links
-                    height: 50rem
+                    height: 45rem
                     display: flex
                     align-items: center
+                    margin-left: 4rem
                     flex-direction: column
                     justify-content: space-around
                     transition: $standar
@@ -78,7 +79,7 @@
                         margin-left: 2.7rem
                         pointer-events: auto
                         text-decoration: none
-                        font-size: $title-card
+                        font-size: $subtitle-card
 
                         .hidden
                             opacity: 1
@@ -88,7 +89,7 @@
                             transition-delay: calc( .1s * var(--i))
 
             .settings-dropdown
-                width: 40rem
+                width: 35rem
                 height: 15rem
                 display: flex
                 align-items: end
@@ -97,7 +98,7 @@
                 .dropdown-content
                     width: 30rem
                     height: 8rem
-                    bottom: 7rem
+                    bottom: 6rem
                     left: 1.5rem
                     display: flex
                     cursor: pointer
@@ -107,10 +108,11 @@
                     justify-content: space-evenly
 
                     a
-                        color: #000
+                        scale: .9
                         width: 18rem
                         display: flex
-                        translate: 0 -1rem
+                        color: #000
+                        translate: 0 0
                         text-align: center
                         align-items: center
                         transition: $standar
@@ -127,12 +129,13 @@
                         width: 4rem
 
                     button
+                        scale: .9
                         border: none
                         display: flex
                         cursor: pointer
-                        margin-bottom: 1rem
                         align-items: center
                         transition: $standar
+                        margin-bottom: .5rem
                         padding-block: .2rem
                         border-radius: $br-rad
                         background: $background
@@ -153,6 +156,7 @@
                     .img-sidebar
                         width: 4rem
                         height: 4rem
+                        margin-top: 2rem
                         margin-left: 1.5rem
 
                     .btn-profile
@@ -160,12 +164,13 @@
                         width: 30rem
                         display: flex
                         cursor: pointer
+                        margin-top: 2rem
                         margin-left: 3rem
                         align-items: center
                         translate: -3.5rem 0
                         justify-content: start
-                        font-size: $title-card
                         background: transparent
+                        font-size: $subtitle-card
                         transition-delay: calc( .1s * var(--i))
 
         .container-menu-mobile
@@ -177,7 +182,7 @@
             display: flex
             min-width: 0
             grid-area: main
-            margin-left: 2rem
+            margin-left: -4rem
             transition: $standar
 
 
@@ -211,8 +216,9 @@
 
                     .nav-links
                         width: 10rem
-                        height: 60rem
-                        translate: 0 -10rem
+                        // height: 40rem
+                        margin-left: 0rem
+                        translate: 0 -2rem
 
                         a
                             width: 10rem
@@ -267,7 +273,7 @@
                             pointer-events: none
 
             main
-                margin-left: 6rem
+                margin-left: 4rem
                 transition: $standar
 
 
