fix(index):correction in the view show of the progress module

--- a/resources/sass/_index.sass
+++ b/resources/sass/_index.sass
@@ -12,12 +12,12 @@
     @include btn-return($left: 0, $position: relative, $width: 8rem, $height: 8rem)
 
     .unit-details
-        width: 78%
-        padding: 2.1rem
+        width: 75%
         display: flex
         flex-wrap: wrap
+        padding: 2.1rem
         margin-top: 3rem
-        translate: 10rem 0
+        translate: 7rem 0
         box-shadow: $shadow
         border-radius: $br-rad
 
@@ -63,6 +63,7 @@
             width: 40rem
             height: 8rem
             display: flex
+            margin-top: 1rem
             flex-direction: column
 
             label
