--- a/resources/sass/_mixins.sass
+++ b/resources/sass/_mixins.sass
@@ -3,8 +3,8 @@
     .back
         top: 3rem
         left: $left
+        height: $height
         width: $width
-        height: $width
         position: $position
 
         .btn-back
