feat(form): add new style for forms of the view create and edit of the unit module

--- a/resources/sass/_index.sass
+++ b/resources/sass/_index.sass
@@ -9,7 +9,7 @@
         display: flex
         width: 100%
 
-    @include btn-return($left: 0, $position: relative, $width: 8rem, $height: 8rem)
+    @include btn-return($left: 0, $top: 3rem ,$position: relative, $width: 8rem, $height: 8rem)
 
     .unit-details
         width: 75%
@@ -266,7 +266,7 @@
             width: 100%
             background: red
 
-        @include btn-return($left: -2rem, $position: relative, $height: 1rem, $width: 1rem )
+        @include btn-return($left: -2rem, $top: 3rem, $position: relative, $height: 1rem, $width: 1rem )
 
         .unit-details
             width: 60rem
