--- a/resources/sass/_mixins.sass
+++ b/resources/sass/_mixins.sass
@@ -1,7 +1,7 @@
 
-@mixin btn-return($left, $position, $height, $width)
+@mixin btn-return($left, $top, $position, $height, $width)
     .back
-        top: 3rem
+        top: $top
         left: $left
         height: $height
         width: $width
