--- a/resources/sass/_show.sass
+++ b/resources/sass/_show.sass
@@ -6,7 +6,7 @@
     justify-content: space-evenly
     align-items: center
 
-    @include btn-return($left: 45rem, $position: absolute, $width: 8rem, $height: 8rem)
+    @include btn-return($left: 45rem, $top: 3rem, $position: absolute, $width: 8rem, $height: 8rem)
 
 
     .card
