--- a/resources/sass/_register.sass
+++ b/resources/sass/_register.sass
@@ -7,14 +7,14 @@ body, input, button
 
 
     .title-register
-        font-size: $title-card
+        font-size: $subtitle-card
 
     background: $cards
     flex-wrap: wrap
     width: 100%
-    max-width: 130rem
+    max-width: 110rem
     flex: 1 1 50rem
-    height: 90rem
+    height: 70rem
     border-radius: 1.6rem
     display: flex
     align-items: center
@@ -32,7 +32,7 @@ body, input, button
         justify-content: space-around
 
         & .text-labels
-            font-size: $subtitle
+            font-size: $subtitle-card
             font-weight: 500
             margin-top: 1rem
 
@@ -44,8 +44,8 @@ body, input, button
             background: $background
             justify-content: space-evenly
             align-items: center
-            width: 59rem
-            height: 5.5rem
+            width: 40rem
+            height: 4.5rem
             margin-top: 1rem
             border-radius: $br-rad
             border: 2px solid transparent
@@ -66,11 +66,11 @@ body, input, button
                 transition: $standar
 
             .inputs
-                width: 53rem
+                width: 30rem
                 outline: none
                 flex: 1 1 25rem
                 display: flex
-                height: 4rem
+                height: 3rem
                 font-size: $subtitle-card
                 border: 2px solid transparent
                 border-radius: .8rem
@@ -84,8 +84,8 @@ body, input, button
 
 
             .gif-icons
-                width: 5rem
-                height: 5rem
+                width: 3.5rem
+                height: 3.5rem
                 z-index: 20
                 cursor: pointer
                 transition: $standar
@@ -100,7 +100,7 @@ body, input, button
         margin-top: 3rem
 
     .gender-containerIf
-        width: 57rem
+        width: 30rem
         display: flex
         align-items: center
         justify-content: center
@@ -110,7 +110,7 @@ body, input, button
         font-size: $subtitle-card
 
     .select
-        width: 57rem
+        width: 35rem
         cursor: pointer
         transition: $standar
         display: flex
@@ -127,7 +127,7 @@ body, input, button
         z-index: 999
 
         .gender-container
-            width: 50rem
+            width: 30rem
             display: flex
             align-items: center
             background: $background
@@ -137,8 +137,8 @@ body, input, button
 
 
             .gif-icons
-                width: 4rem
-                height: 4rem
+                width: 3.5rem
+                height: 3.5rem
 
 
 
@@ -164,7 +164,7 @@ body, input, button
     .btn-ok
         width: fit-content
         height: 5rem
-        font-size: $subtitle
+        font-size: $title-card
         border-radius: $br-rad
         border: none
         outline: none
@@ -185,10 +185,10 @@ body, input, button
             transition: $standar
 
     .question
-        margin: 3rem 0 3rem 0
+        margin: 1.5rem 0 3rem 0
         text-align: center
         color: #000000fd
-        font-size: $title-card
+        font-size: $subtitle-card
         transition: $standar
 
         .link:hover
