feat(lessons): add new structure for the create and edit views of the resources module

--- a/resources/sass/_forms.sass
+++ b/resources/sass/_forms.sass
@@ -57,6 +57,24 @@
                         border-radius: $br-rad
                         border: 2px solid $cards
 
+                    .file-input
+                        background: transparent
+
+                    .name-file
+                        font-size: $description-card
+
+                    .file-info
+                        width: 35rem
+                        display: flex
+                        flex-wrap: wrap
+
+                        span
+                            width: 20rem
+                            font-size: $description-card
+
+                    .file
+                        display: none
+
                     .error-text
                         color: $errors
                         font-size: $description-card
